hs-bindgen/test-artefacts/headers/golden/edge-cases/names.h

// Names we expect to be escaped (`ghcExtensionKeywords`)
// NOTE: `static` is (also) a C keyword and so cannot appear here.
void by(void);
void forall(void);
void mdo(void);
void pattern(void);
void proc(void);
void rec(void);
void using(void);

// Names we expect _not_ to be escaped (`ghcNonReservedKeywords`)
void anyclass(void);
void capi(void);
void cases(void);
void ccall(void);
void dynamic(void);
void export(void);
void family(void);
void group(void);
void interruptible(void);
void javascript(void);
void label(void);
void prim(void);
void role(void);
void safe(void);
void stdcall(void);
void stock(void);
void unsafe(void);
void via(void);