hs-bindgen/fixtures/edge-cases/names/rust-bindgen.rs

/* automatically generated by rust-bindgen 0.71.1 */

unsafe extern "C" {
    pub fn by();
}
unsafe extern "C" {
    pub fn forall();
}
unsafe extern "C" {
    pub fn mdo();
}
unsafe extern "C" {
    pub fn pattern();
}
unsafe extern "C" {
    #[link_name = "\u{1}proc"]
    pub fn proc_();
}
unsafe extern "C" {
    pub fn rec();
}
unsafe extern "C" {
    pub fn using();
}
unsafe extern "C" {
    pub fn anyclass();
}
unsafe extern "C" {
    pub fn capi();
}
unsafe extern "C" {
    pub fn cases();
}
unsafe extern "C" {
    pub fn ccall();
}
unsafe extern "C" {
    pub fn dynamic();
}
unsafe extern "C" {
    pub fn export();
}
unsafe extern "C" {
    pub fn family();
}
unsafe extern "C" {
    pub fn group();
}
unsafe extern "C" {
    pub fn interruptible();
}
unsafe extern "C" {
    pub fn javascript();
}
unsafe extern "C" {
    pub fn label();
}
unsafe extern "C" {
    pub fn prim();
}
unsafe extern "C" {
    pub fn role();
}
unsafe extern "C" {
    pub fn safe();
}
unsafe extern "C" {
    pub fn stdcall();
}
unsafe extern "C" {
    pub fn stock();
}
unsafe extern "C" {
    #[link_name = "\u{1}unsafe"]
    pub fn unsafe_();
}
unsafe extern "C" {
    pub fn via();
}
